--- a/Lab1/index.html
+++ b/Lab1/index.html
@@ -14,8 +14,8 @@
         <input type="text" id="pool3" class="pool"><br>
     </div>
     <div class="execute">
-        <button id="add">Add pool</button><br>
-        <button id="remove">Remove pool</button><br>
+        <button id="exec">Execute</button><br>
+
 
     </div>
 
