--- a/Slider/index.html
+++ b/Slider/index.html
@@ -33,6 +33,7 @@
         </div>
       </div> 
     <main>
+      <script src="path-to-the-script/splide-extension-auto-scroll.min.js"></script>
     <script src="app.js"></script>
   </body>
 </html>
