--- a/Pogodynka/index.html
+++ b/Pogodynka/index.html
@@ -18,9 +18,8 @@
 </head>
 
 <body>
-
-    <div class="wrapper">
-        <li class="add-box">
+    <div class="wrapper-add">
+        <li class="addWeatherButton">
           <div class="icon"><i class="uil uil-plus"></i></div>
           <p>Add new weather</p>
         </li>
